--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="./src/styles.css">
   </head>
   <body>
-    <h1>WHACK A MOLE!</h1>
+    <h1 id="title">WHACK A MOLE!</h1>
     
     <button id="start">start</button>
     <div>
