--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="./src/styles.css">
+    <title> Whack A Mole!</title>
   </head>
   <body>
     <h1 id="title">WHACK A MOLE!</h1>
