--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
-<!Doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="./src/styles.css">
-    <title> Whack A Mole!</title>
+    <link rel="stylesheet" href="./src/styles.css" />
+    <title>WHACK A MOLE!</title>
   </head>
   <body>
     <h1 id="title">WHACK A MOLE!</h1>
-    
-    <button id="start">start</button>
+
+    <center><button id="start">start</button></center>
     <div>
       <div>
         <h2>Click start to play!</h2>
       </div>
       <div>
-        <h2>score: <span id="score">0</span></h2>
+        <h2>Score: <span id="score">0</span></h2>
       </div>
       <div>
-          <h2><span id="timer">0</span> seconds left.</h2>
+        <h2><span id="timer">0</span> seconds left.</h2>
       </div>
     </div>
     <div class="grid">
@@ -26,7 +26,7 @@
       <div id="hole1" class="hole">
         <div id="mole1" class="mole"></div>
       </div>
-     <div id="hole2" class="hole">
+      <div id="hole2" class="hole">
         <div id="mole2" class="mole"></div>
       </div>
       <div id="hole3" class="hole">
@@ -46,8 +46,6 @@
       </div>
       <div id="hole8" class="hole">
         <div id="mole8" class="mole"></div>
-      </div>
-    
       </div>
     </div>
     <script src="./src/index.js"></script>
