--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+  <meta name="viewport" content="width=device-width, initial-scale=.75">
     <link rel="stylesheet" href="./src/styles.css" />
     <title>WHACK A MOLE!</title>
   </head>
