--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1 id="title">WHACK A MOLE!</h1>
 
-    <center><button id="start">start</button></center>
+    <center><button id="start">START</button></center>
     <div>
       <div>
         <h2>Click start to play!</h2>
