--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <meta name="viewport" content="width=device-width, initial-scale=.75">
+  <meta name="viewport" content="width=device-width, initial-scale=.6">
     <link rel="stylesheet" href="./src/styles.css" />
     <title>WHACK A MOLE!</title>
   </head>
   <body>
     <h1 id="title">WHACK A MOLE!</h1>
 
-    <center><button id="start">START</button></center>
+    <center><button id="start">START!</button></center>
     <div>
       <div>
-        <h2>Click start to play!</h2>
+        <h2>Click START to play!</h2>
       </div>
       <div>
         <h2>Score: <span id="score">0</span></h2>
