--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <body>
     <h1 id="title">WHACK A MOLE!</h1>
 
-    <center><button id="start">START!</button></center>
+    
     <div>
       <div>
-        <h2>Click START to play!</h2>
+        <h2>Click <center><button id="start">START!</button></center> to play!</h2>
       </div>
       <div>
         <h2>Score: <span id="score">0</span></h2>
